[package]
name = "vision_manager"
version = "0.1.0"
authors = ["carbotaniuman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vision_traits = { path = "../vision_traits" }
modules = { path = "modules" }
uuid = { version = "0.8.1", features = ["v4"] }
