[package]
name = "modules"
version = "0.1.0"
authors = ["carbotaniuman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vision_traits = { path = "../../vision_traits" }
opencv = {version = "0.43.1", features = ["buildtime-bindgen"]}
